# QtAliceVision

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  COPYING.md  INSTALL.md  README.md
src/: AttributeItemDelegate.frag  CMakeLists.txt  FeaturesViewer.cpp  FeaturesViewer.hpp  FloatImageViewer.cpp  FloatImageViewer.frag  FloatImageViewer.hpp  FloatImageViewer.vert  FloatTexture.cpp  FloatTexture.hpp  ImageOverlay.frag  ImageServer.hpp  MDescFeatures.cpp  MDescFeatures.hpp  MFeature.cpp  MFeature.hpp  MFeatures.cpp  MFeatures.hpp  MSfMData.cpp  MSfMData.hpp  MSfMDataStats.cpp  MSfMDataStats.hpp  MTracks.cpp  MTracks.hpp  MViewStats.cpp  MViewStats.hpp  PanoramaViewer.cpp  PanoramaViewer.hpp  SequenceCache.cpp  SequenceCache.hpp  ShaderImageViewer.hpp  SingleImageLoader.cpp  SingleImageLoader.hpp  Surface.cpp  Surface.hpp  plugin.hpp
src/depthMapEntity/: CMakeLists.txt  DepthMapEntity.cpp  DepthMapEntity.hpp  plugin.hpp  qmldir
src/qmlAlembic/: AlembicEntity.cpp  AlembicEntity.hpp  BaseAlembicObject.cpp  CMakeLists.txt  ObservationsEntity.cpp  ObservationsEntity.hpp  plugin.hpp
src/qmlSfmData/: CMakeLists.txt  CameraLocatorEntity.cpp  CameraLocatorEntity.hpp  IOThread.cpp  IOThread.hpp  PointCloudEntity.cpp  PointCloudEntity.hpp  SfmDataEntity.cpp  SfmDataEntity.hpp  plugin.hpp  qmldir
src/qtAliceVision/: AsyncFetcher.cpp  AsyncFetcher.hpp  AttributeItemDelegate.frag  CMakeLists.txt  FeaturesViewer.cpp  FeaturesViewer.frag  FeaturesViewer.hpp  FeaturesViewer.vert  FloatImageViewer.cpp  FloatImageViewer.frag  FloatImageViewer.hpp  FloatImageViewer.vert  FloatTexture.cpp  FloatTexture.hpp  ImageCache.cpp  ImageCache.hpp  ImageOverlay.frag  ImageServer.hpp  MFeature.cpp  MFeature.hpp  MFeatures.cpp  MFeatures.hpp  MSfMData.cpp  MSfMData.hpp  MSfMDataStats.cpp  MSfMDataStats.hpp  MTracks.cpp  MTracks.hpp  MViewStats.cpp  MViewStats.hpp  Painter.cpp  Painter.hpp  PanoramaViewer.cpp  PanoramaViewer.hpp  PhongImageViewer.cpp  PhongImageViewer.frag  PhongImageViewer.hpp  PhongImageViewer.vert  SequenceCache.cpp  SequenceCache.hpp  (+7 more)
src/qtAliceVisionImageIO/: CMakeLists.txt  QtAliceVisionImageIOHandler.cpp  QtAliceVisionImageIOHandler.hpp  plugin.cpp  plugin.hpp
src/qtAliceVision_imageIO/: CMakeLists.txt  DepthMapEntity.cpp  DepthMapEntity.hpp  plugin.hpp  qmldir
src/qtAliceVision_imageIO_qtHandler/: CMakeLists.txt  QtAliceVisionImageIOHandler.cpp  QtAliceVisionImageIOHandler.hpp  imageIOHandler.cpp  plugin.cpp  plugin.hpp
